2008-02-18  Zoltan Varga  <vargaz@gmail.com>

	* CustomAttributeTypedArgument.cs (.ctor): Convert arrays into a
	collection of
		CustomAttributeTypedArguments to match MS.

2008-01-22  Zoltan Varga  <vargaz@gmail.com>

	* MonoGenericClass.cs: Make this NET 2.0 only.
	
	* MonoGenericClass.cs (Initialize): Simplify this a bit and add comments for this
	class.

2008-01-20  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyName.cs: Added support for Retargetable spec in FullName.

2008-01-17  Zoltan Varga  <vargaz@gmail.com>

	* Assembly.cs AssemblyFlagsAttribute.cs ICustomAttributeProvider.cs
	MemberInfo.cs FieldInfo.cs DefaultMemberAttribute.cs 
	CustomAttributeNamedArgument.cs TargetException.cs MethodInfo.cs
	IReflect.cs CustomAttributeTypedArgument.cs Module.cs: Change some parameter
	names to match MS.

2008-01-15  Jb Evain  <jbevain@novell.com>

	* MonoMethod.cs (MakeGenericMethod): check for null values
	in the types arguments. Fixes #353849.

2008-01-06  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Fix typo in setter found with Gendarme (was used in a
	single place, AppDomain, and set to true so it never caused a problem)

2008-01-04  Gert Driesen  <drieseng@users.sourceforge.net>

	* AssemblyName.cs: Fixed default value for ProcessorArchitecture to
	match MS. On 2.0 profile, return zero-length in FullName is no name
	is set, and throw a SecurityException in FullName and GetPublicKeyToken
	if a public key is set with no corresponding public key token. 
	Fixed FullName to also include PublicKeyToken spec with "null" value
	if public key is empty byte array. Fixed corlib part of bug #351057.
	In SetPublicKey, modify Flags accordingly. On the 2.0 profile, verify
	the public key when the public key token is computed.

2007-12-26  Zoltan Varga  <vargaz@gmail.com>

	* Assembly.cs (GetSatelliteAssembly): Search in the assembly directory as well.
	Fixes ##345627.

2007-12-03  Zoltan Varga  <vargaz@gmail.com>
